# Ferrum-Gate

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  README.vi.md  RELEASE.md  SECURITY.md  _manifest.json  clippy.toml  deny.toml  docker-compose.demo.yml  docker-compose.ha-local.yml  docker-compose.postgres-demo.yml  docker-compose.postgres.yml  skills-lock.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
assets/: README.md
baselines/: sample_health_5s.json  sample_intent_compile_5s.json  (+1 more)
benches/: Cargo.toml
benches/src/: main.rs
bins/ferrum-migrate/: Cargo.toml
bins/ferrum-migrate/src/: main.rs
bins/ferrum-stress/: Cargo.toml
bins/ferrum-stress/src/: main.rs
bins/ferrum-tui/: Cargo.toml  README.md
bins/ferrum-tui/src/: app.rs  client.rs  main.rs
bins/ferrumctl/: Cargo.toml
bins/ferrumctl/src/: audit_bundle.rs  backup.rs  client.rs  main.rs  slo_window.rs
bins/ferrumctl/tests/: process_approval.rs  process_author_request.rs  process_inspect_capability.rs  process_revoke_capability.rs  process_rollback.rs
bins/ferrumd/: Cargo.toml
bins/ferrumd/src/: config.rs  main.rs
bins/ferrumd/src/config/: config_tests.rs
crates/ferrum-adapter-emailsend/: Cargo.toml
crates/ferrum-adapter-emailsend/src/: lib.rs
crates/ferrum-adapter-fs/: Cargo.toml  README.md
crates/ferrum-adapter-fs/src/: lib.rs  planner.rs  snapshot.rs  tests.rs  validation.rs
crates/ferrum-adapter-http/: Cargo.toml  README.md
crates/ferrum-adapter-http/src/: lib.rs  planner.rs  tests.rs
crates/ferrum-adapter-s3/: Cargo.toml  README.md
crates/ferrum-adapter-s3/src/: lib.rs  planner.rs
crates/ferrum-adapter-s3/tests/: minio_integration.rs
crates/ferrum-cap/: Cargo.toml  README.md
crates/ferrum-cap/src/: lib.rs  service.rs  sqlite.rs
crates/ferrum-gateway/: Cargo.toml  README.md
crates/ferrum-gateway/src/: approval.rs  audit.rs  auth_actor.rs  bridge.rs  capabilities.rs  execution.rs  execution_tests.rs  intents.rs  lib.rs  lineage.rs  macros.rs  metrics.rs  mfa.rs  monitoring.rs  policy.rs  policy_eval.rs  problem.rs  proposals.rs  provenance.rs  response.rs  server.rs  server_evaluate_outcome_tests.rs  server_git_rollback_tests.rs  server_rate_limit_tests.rs  state.rs
crates/ferrum-gateway/src/admin/: agents.rs  lifecycle_outbox.rs  mfa.rs  mod.rs  tokens.rs
crates/ferrum-integration-tests/: Cargo.toml
crates/ferrum-integration-tests/src/: integration_contracts.rs  integration_fs_roundtrip.rs  integration_gateway_flow.rs  integration_lineage_chain.rs  integration_rate_limit.rs  lib.rs
crates/ferrum-integrations-mcp/: Cargo.toml
crates/ferrum-integrations-mcp/src/: bridge.rs  client.rs  error.rs  http_client.rs  lib.rs  mapping.rs  mapping_helpers.rs  rest_mapper.rs  stage2_types.rs  types.rs
crates/ferrum-integrations-mcp/src/vendors/: mod.rs
crates/ferrum-ledger/: Cargo.toml  README.md
crates/ferrum-ledger/src/: lib.rs
crates/ferrum-pdp/: Cargo.toml  README.md
crates/ferrum-pdp/src/: engine.rs
crates/ferrum-proto/: Cargo.toml  README.md
crates/ferrum-proto/src/: agent.rs  api.rs  approval.rs  audit_log.rs  capability.rs  common.rs  execution.rs  ids.rs  intent.rs  lib.rs  lifecycle_outbox.rs  mfa.rs  policy_bundle.rs  provenance.rs  rollback.rs  token.rs
crates/ferrum-rollback/: Cargo.toml  README.md
crates/ferrum-rollback/src/: adapter.rs  lib.rs  service.rs
crates/ferrum-store/: Cargo.toml  README.md
crates/ferrum-store/migrations/: 001_initial.sql  002_add_leader_tips.sql  003_add_sync_state.sql  004_add_leader_allowlist.sql  005_add_policy_bundles.sql  006_add_policy_bundle_lineage.sql  006_add_policy_bundle_versions.sql  007_add_tokens.sql  008_add_audit_log.sql  009_add_audit_log_hash_chain.sql  010_add_agent_registry.sql  013_add_lifecycle_outbox.sql  014_add_lifecycle_outbox_fencing.sql  015_add_mfa_credentials.sql  017_add_mfa_lockout_columns.sql
crates/ferrum-store/migrations/postgres/: 001_initial.sql  002_add_policy_bundle_versions.sql  003_add_audit_log_hash_chain.sql  005_add_audit_merkle_roots.sql  006_add_audit_checkpoints.sql  007_add_provenance_foreign_keys.sql  008_add_lifecycle_outbox.sql  009_add_lifecycle_outbox_reconciliation_lease.sql  010_add_lifecycle_outbox_fencing.sql  011_add_mfa_credentials.sql  012_add_mfa_credentials_active_index.sql  013_add_mfa_lockout_columns.sql
crates/ferrum-store/src/: error.rs  lib.rs  merkle.rs  reconciliation.rs  repos.rs  sync_service.rs  transitions.rs
crates/ferrum-store/src/postgres/: agents.rs  approvals.rs  audit_checkpoint.rs  audit_log.rs  audit_merkle_root.rs  capabilities.rs  executions.rs  helpers.rs  intents.rs  ledger.rs  lifecycle_outbox.rs  mfa_credentials.rs  migrations.rs  mod.rs  policy_bundles.rs  proposals.rs  provenance.rs  rollback.rs  tokens.rs
crates/ferrum-store/src/sqlite/: agents.rs  approvals.rs  audit_checkpoint.rs  audit_log.rs  audit_merkle_root.rs  capabilities.rs  executions.rs  helpers.rs  intents.rs  leader_allowlist.rs  leader_tip_cache.rs  ledger.rs  lifecycle_outbox.rs  mfa_credentials.rs  migrations.rs  mod.rs  policy_bundles.rs  proposals.rs  provenance.rs  rollback.rs  sync_preflight.rs  tests.rs  tokens.rs  write_queue.rs
crates/ferrum-store/tests/: intent_list.rs  invalid_transitions.rs  postgres_bench.rs  postgres_intents.rs
crates/ferrum-sync/: Cargo.toml  README.md
crates/ferrum-sync/src/: decision.rs  error.rs  external_source.rs  facade.rs  http_transport.rs  lib.rs  mcp_bridge.rs  preflight.rs  proof.rs  repo.rs  transport.rs
docs/: README.md  (+30 more)
tests/: Cargo.toml  README.md  integration_capability_restart.rs  integration_contracts.rs  integration_ferrumctl_approval.rs  integration_gateway_flow.rs  integration_lineage_chain.rs  integration_mcp_bridge.rs  integration_poisoned_context.rs  integration_provenance_query.rs  test_validate_docs_links.py  test_validate_evidence_templates.py  test_validate_monitoring_metrics.py  test_validate_openapi_yaml.py  test_validate_toml_configs.py
(+741 files in other folders)
