[workspace]
members = [
  "bins/ferrumd",
  "bins/ferrumctl",
  "crates/ferrum-proto",
  "crates/ferrum-pdp",
  "crates/ferrum-cap",
  "crates/ferrum-rollback",
  "crates/ferrum-gateway",
  "crates/ferrum-firewall",
  "crates/ferrum-store",
  "crates/ferrum-graph",
  "crates/ferrum-ledger",
  "crates/ferrum-adapter-fs",
  "crates/ferrum-adapter-git",
  "crates/ferrum-adapter-sqlite",
  "crates/ferrum-adapter-http",
  "crates/ferrum-adapter-maildraft",
  "crates/ferrum-testkit",
  "crates/ferrum-integration-tests",
  "crates/ferrum-sync",
  "crates/ferrum-integrations-mcp",
  "bins/ferrum-stress",
  "bins/ferrum-migrate",
  "bins/ferrum-tui"
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/ferrumgate/ferrum-gate"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
schemars = { version = "0.8", features = ["chrono", "uuid1", "indexmap"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "chrono", "uuid", "runtime-tokio-rustls"] }
sha2 = "0.10"
petgraph = "0.7"
clap = { version = "4", features = ["derive"] }
indexmap = { version = "1", features = ["serde"] }
hyper = "1"
hyper-util = "0.1"
http = "1"
http-body-util = "0.1"
tower_governor = "0.8"
bytes = "1"
rustic = "0.12"
base64 = "0.22"
rusqlite = "0.32"
tempfile = "3"
hex = "0.4"
constant_time_eq = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde_yaml = "0.9"
blake3 = "1.5"
jsonwebtoken = "9"
rand = "0.8"
regex = "1"
