[package]
name = "ferrum-perf-baseline"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
ferrum-store = { path = "../crates/ferrum-store" }
ferrum-adapter-sqlite = { path = "../crates/ferrum-adapter-sqlite" }
ferrum-proto = { path = "../crates/ferrum-proto" }
ferrum-rollback = { path = "../crates/ferrum-rollback" }
