[package]
name = "ferrum-migrate"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[features]
default = []
# PostgreSQL migration support — feature-gated and local/bounded, NOT production-ready/HA
postgres = ["ferrum-store/postgres", "sqlx/postgres"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx = { workspace = true }
ferrum-store = { path = "../../crates/ferrum-store" }
ferrum-proto = { path = "../../crates/ferrum-proto" }
chrono = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
