[package]
publish = false
name = "ferrum-stress"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
ferrum-gateway = { path = "../../crates/ferrum-gateway" }
ferrum-store = { path = "../../crates/ferrum-store" }
ferrum-sync = { path = "../../crates/ferrum-sync" }
async-trait = { workspace = true }
ferrum-pdp = { path = "../../crates/ferrum-pdp" }
ferrum-cap = { path = "../../crates/ferrum-cap" }
ferrum-rollback = { path = "../../crates/ferrum-rollback" }
ferrum-proto = { path = "../../crates/ferrum-proto" }
tempfile.workspace = true

[features]
default = []
s3 = ["ferrum-gateway/s3"]
