[package]
publish = false
name = "ferrum-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "time", "sync"] }
reqwest = { version = "0.13", features = ["json", "rustls-tls"], default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
clap = { workspace = true, features = ["derive"] }
chrono.workspace = true
ratatui = { version = "0.30.1", default-features = false, features = [
    "crossterm",
    "layout-cache",
    "macros",
    "underline-color",
] }
crossterm = "0.28"

[dev-dependencies]
tempfile.workspace = true
