[package]
name = "ferrumctl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ferrum-proto = { path = "../../crates/ferrum-proto" }
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
# Gateway runtime for spawning a local test server
ferrum-gateway = { path = "../../crates/ferrum-gateway" }
ferrum-proto = { path = "../../crates/ferrum-proto" }
ferrum-store = { path = "../../crates/ferrum-store" }
ferrum-rollback = { path = "../../crates/ferrum-rollback" }
ferrum-pdp = { path = "../../crates/ferrum-pdp" }
ferrum-cap = { path = "../../crates/ferrum-cap" }
ferrum-firewall = { path = "../../crates/ferrum-firewall" }
ferrum-adapter-fs = { path = "../../crates/ferrum-adapter-fs" }
# Web framework for local test server
axum.workspace = true
# Async runtime + temp dirs — tokio, chrono, tempfile all declared as workspace deps
tokio.workspace = true
tempfile.workspace = true
chrono.workspace = true
