[package]
publish = false
name = "ferrumd"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# PostgreSQL runtime support — feature-gated and local/bounded, NOT production-ready/HA
postgres = ["ferrum-store/postgres", "ferrum-gateway/postgres"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_derive.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ferrum-gateway = { path = "../../crates/ferrum-gateway" }
ferrum-proto = { path = "../../crates/ferrum-proto" }
ferrum-pdp = { path = "../../crates/ferrum-pdp" }
ferrum-cap = { path = "../../crates/ferrum-cap" }
ferrum-rollback = { path = "../../crates/ferrum-rollback" }
ferrum-store = { path = "../../crates/ferrum-store" }
ferrum-sync = { path = "../../crates/ferrum-sync" }
ferrum-adapter-fs = { path = "../../crates/ferrum-adapter-fs" }
ferrum-adapter-git = { path = "../../crates/ferrum-adapter-git" }
ferrum-adapter-http = { path = "../../crates/ferrum-adapter-http" }
ferrum-adapter-sqlite = { path = "../../crates/ferrum-adapter-sqlite" }
ferrum-adapter-maildraft = { path = "../../crates/ferrum-adapter-maildraft" }
ferrum-adapter-s3 = { path = "../../crates/ferrum-adapter-s3" }
