[package]
name = "ferrum-adapter-emailsend"
version = "0.1.0"
edition = "2024"
description = "Ferrum-Gate EmailSend adapter scaffold — prepare-time validation and fail-closed execute semantics (no actual send)"
publish = false

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
ferrum-proto = { path = "../ferrum-proto" }
ferrum-rollback = { path = "../ferrum-rollback" }
