[package]
name = "ferrum-adapter-fs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
chrono = { workspace = true }
tempfile = { workspace = true }
ferrum-proto = { path = "../ferrum-proto" }
ferrum-rollback = { path = "../ferrum-rollback" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
