[package]
name = "ferrum-adapter-http"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = { workspace = true }
ferrum-proto = { path = "../ferrum-proto" }
ferrum-rollback = { path = "../ferrum-rollback" }

[dev-dependencies]
tokio-test = "0.4"
tiny_http = "0.12"
chrono = { workspace = true }
