[package]
publish = false
name = "ferrum-adapter-http"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
hyper-util = { workspace = true, features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["rustls-tls"] }
ferrum-proto = { path = "../ferrum-proto" }
ferrum-rollback = { path = "../ferrum-rollback" }

[dev-dependencies]
axum = { workspace = true }
tower = { workspace = true }
