[package]
publish = false
name = "ferrum-adapter-s3"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferrum-proto = { path = "../ferrum-proto" }
ferrum-rollback = { path = "../ferrum-rollback" }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }

aws-config = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
aws-credential-types = { workspace = true, optional = true }

[features]
default = []
s3-client = ["aws-config", "aws-sdk-s3", "aws-credential-types"]

[dev-dependencies]
tokio = { workspace = true }
