[package]
name = "ferrum-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
prometheus = "0.13"
regex = "1"

ferrum-proto = { path = "../ferrum-proto" }
ferrum-pdp = { path = "../ferrum-pdp" }
ferrum-cap = { path = "../ferrum-cap" }
ferrum-rollback = { path = "../ferrum-rollback" }
ferrum-store = { path = "../ferrum-store" }
ferrum-firewall = { path = "../ferrum-firewall" }
ferrum-ledger = { path = "../ferrum-ledger" }
ferrum-graph = { path = "../ferrum-graph" }
uuid.workspace = true
