[package]
publish = false
name = "ferrum-integration-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
ferrum-cap = { path = "../ferrum-cap" }
ferrum-gateway = { path = "../ferrum-gateway", features = ["test-utils"] }
ferrum-graph = { path = "../ferrum-graph" }
ferrum-pdp = { path = "../ferrum-pdp" }
ferrum-proto = { path = "../ferrum-proto" }
ferrum-rollback = { path = "../ferrum-rollback" }
ferrum-store = { path = "../ferrum-store" }
ferrum-adapter-fs = { path = "../ferrum-adapter-fs" }
ferrum-adapter-git = { path = "../ferrum-adapter-git" }
ferrum-adapter-maildraft = { path = "../ferrum-adapter-maildraft" }
ferrum-adapter-sqlite = { path = "../ferrum-adapter-sqlite" }
ferrum-sync = { path = "../ferrum-sync" }
http.workspace = true
rusqlite = { workspace = true }
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, default-features = false }
tempfile.workspace = true
sha2.workspace = true
hex.workspace = true
indexmap.workspace = true
tokio.workspace = true
tower.workspace = true
hyper.workspace = true
uuid.workspace = true

[[test]]
name = "integration_gateway_flow"
path = "src/integration_gateway_flow.rs"

[[test]]
name = "integration_contracts"
path = "src/integration_contracts.rs"

[[test]]
name = "integration_lineage_chain"
path = "src/integration_lineage_chain.rs"

[[test]]
name = "integration_fs_roundtrip"
path = "src/integration_fs_roundtrip.rs"

[[test]]
name = "integration_rate_limit"
path = "src/integration_rate_limit.rs"
