[package]
name = "ferrum-pdp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
ferrum-proto = { path = "../ferrum-proto" }

[dev-dependencies]
tokio.workspace = true
chrono.workspace = true
serde_json.workspace = true
