[package]
publish = false
name = "ferrum-rollback"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde_json.workspace = true
ferrum-proto = { path = "../ferrum-proto" }

[dev-dependencies]
tokio.workspace = true
