[package]
name = "ferrum-store"
version = "0.1.0"
edition = "2024"

[features]
default = []
# PostgreSQL P2 skeleton — NOT runtime supported; enables compile-time infrastructure only
# The postgres feature is compile-time only and does NOT enable runtime PostgreSQL support.
postgres = ["sqlx/postgres"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
ferrum-proto = { path = "../ferrum-proto" }
ferrum-sync = { path = "../ferrum-sync" }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }

[build-dependencies]
